add ability to add task, delete task

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,13 @@
 <h1>My tasks</h1>
 
 <% @tasks.each do |task| %>
-<p>[<%= task.completed? ? "X" : " " %>] <%= link_to task.title, show_path(task) %></p>
+<p>[<%= task.completed? ? "X" : " " %>] <%= link_to task.title, show_path(task) %> <%= link_to "Delete", delete_path(task),
+      method: :delete,
+      data: { confirm: "Are you sure?" } %></p>
 <% end %>
+
+<hr class="line"></hr>
+
+<div class="link">
+  <p><%= link_to "Add a new task", new_path %></p>
+</div>
